--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "craft-snippets",
   "main": "./craft-snippets",
   "version": "0.1",
-  "description": "A collection of snippets that improve your Craft workflow!",
+  "description": "A collection of snippets that improve your Craft workflow.",
   "repository": "https://github.com/themccallister/craft-snippets",
   "license": "MIT",
   "engines": {
